<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Tesla</string>
    <string name="app_desc">Universal Remote Control</string>
    
    <!-- Activity buttons -->
    <string name="btn_close">Close</string>
	<string name="btn_connect">Connect</string>
	<string name="btn_shutdown">Turn Off</string>	
	<string name="btn_playlist">Playlist</string>
	<string name="btn_volume">Volume</string>
	<string name="btn_change_app">Change...</string>
	<string name="btn_help">Help</string>
	
    <!-- NewConnection -->
    <string name="host">Host</string>
    <string name="port">Port</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    
    <string name="application_selection">Media Player</string>
	<string name="amarok_item">Amarok</string>
	<string name="dragonplayer_item">Dragon Player</string>
	<string name="rhythmbox_item">Rhythmbox</string>
	<string name="totem_item">Totem</string>
	<string name="vlc_item">VLC</string>
	
	<string name="fake_connection">Fake connect (for testing)</string>
	
	<string name="connection_progress_title">Working...</string>
	<string name="connection_progress_body">Connecting with computer</string>
	
	<!-- App Selector -->
	<string name="app_selector_title">Select Media Player</string>
	<string name="no_apps">No applications available</string>
	
	<!-- VLC notification -->
	<string name="vlc_notify_title">VLC set-up information</string>
	<string name="vlc_notify_body">You are seeing this message because you have selected VLC for the first time.\n\nPlease ensure that you have enabled 'D-Bus control interface' in the preferences of VLC, before pressing %connectBtnText%.\n\nPress %helpBtnText% for step-by-step instructions.</string>
	
	<!-- Playback -->
	<string name="info_title">Tesla - Remote Control</string>
	<string name="info_artist">by Sean Hodges</string>
	
	<string name="menu_application_change">Change Media Player</string>
	<string name="menu_preferences_launch">Preferences</string>
	
	<string name="shut_down_check_title">Confirm shut down</string>
	<string name="shut_down_check_body">Are you sure you want to turn off the computer?</string>
	<string name="shutting_down">Your PC is shutting down</string>
	
	<!-- App Selector -->
	<string name="playlist_title">Playlist</string>
	<string name="no_tracks">Playlist is empty</string>
	
	<!-- Volume control -->
	<string name="volume_title">Volume</string>
	<string name="volume_update">Volume is now</string>
	
	<!-- Preferences -->
	<string name="preferences_title">Preferences</string>
	<string name="volume_target_key">volumeTarget</string>
	<string name="volume_target_title">Target volume</string>
	<string name="volume_target_summary">Control either the system or the media player volume</string>
	<string name="on_call_pause_key">onCallPauseMode</string>
	<string name="on_call_pause_title">Pause player during call</string>
	<string name="on_call_pause_summary">Pause media player when phone call is in progress</string>
	
	<!-- Help browser -->
	<string name="help_title">Tesla Help</string>
	
	<!-- Error messages -->
	<string name="user_error_title">Tesla has encountered a problem</string>
	<string name="user_error_body">Please report the following error code: \n\n%errorcode%\n\nTo seanhodges84@gmail.com, along with a brief description of what you were trying to do when this message appeared.</string>
</resources>
